Name:           ltc
Version:        1.1
Cabal-Version:  >= 1.8
License:        GPL-3
License-File:   LICENSE
Stability:      experimental
Author:         Alexandru Scvortov <scvalex@gmail.com>
Maintainer:     scvalex@gmail.com
Homepage:       https://github.com/scvalex/ltc
Category:       Database
Synopsis:       A distributed, disconnected database for the relativistic universe
Build-Type:     Simple
Description:
        See the @README.md@ file and the homepage for details.

Extra-Source-Files:     Makefile

Data-Files:             README.md, LICENSE

Source-repository head
  Type:                 git
  Location:             https://github.com/scvalex/ltc.git

Library
  Build-depends:        base >= 4 && < 5, bytestring, directory, filepath,
                        hslogger, sexp, SHA, vector-clock, zlib
  Ghc-options:          -Wall
  Extensions:           ScopedTypeVariables, OverloadedStrings
  Exposed-modules:      Ltc.Store

Test-suite store
  Hs-Source-Dirs:       Test, .
  Main-Is:              StoreProps.hs
  Type:                 exitcode-stdio-1.0

  Build-Depends:        base >= 4 && < 5, bytestring, directory, filepath,
                        hslogger, sexp, SHA, vector-clock, zlib
  Ghc-Options:          -Wall
  Extensions:           ScopedTypeVariables, OverloadedStrings

  Build-Depends:        test-framework, test-framework-hunit, test-framework-quickcheck2,
                        HUnit, QuickCheck
