Name:           ltc
Version:        0.5
Cabal-Version:  >= 1.8
License:        GPL-3
License-File:   LICENSE
Stability:      experimental
Author:         Alexandru Scvortov <scvalex@gmail.com>
Maintainer:     scvalex@gmail.com
Homepage:       https://github.com/scvalex/ltc
Category:       Database
Synopsis:       A distributed, disconnected database for the relativistic universe
Build-Type:     Simple
Description:
        See the @README.md@ file and the homepage for details.

Extra-Source-Files:     Makefile

Data-Files:             README.md, LICENSE

Source-repository head
  Type:                 git
  Location:             https://github.com/scvalex/ltc.git

Library
  Build-depends:        attoparsec, base >= 4 && < 5, bytestring, containers, directory,
                        filepath, hslogger, network, pipes >= 3.1, pipes-attoparsec, sexp,
                        SHA, vector-clock, zlib
  Ghc-options:          -Wall
  Extensions:           ScopedTypeVariables, OverloadedStrings
  Exposed-modules:      Ltc.Store, Ltc.Store.Simple, Ltc.Store.Class
  Other-modules:        Network.Redis, Network.RedisServer, Ltc.Adapter.RedisAdapter

Executable ltc
  Build-depends:        attoparsec, base >= 4 && < 5, bytestring, containers, directory,
                        filepath, hslogger, network, pipes >= 3.1, pipes-attoparsec, sexp,
                        SHA, vector-clock, zlib
  Build-depends:        cmdargs
  Ghc-options:          -Wall
  Extensions:           ScopedTypeVariables, OverloadedStrings
  Main-is:              ltc-tool.hs

Test-suite store
  Hs-Source-Dirs:       Test, .
  Main-Is:              StoreProps.hs
  Type:                 exitcode-stdio-1.0
  Build-depends:        attoparsec, base >= 4 && < 5, bytestring, containers, directory,
                        filepath, hslogger, network, pipes >= 3.1, pipes-attoparsec, sexp,
                        SHA, vector-clock, zlib
  Ghc-Options:          -Wall
  Extensions:           ScopedTypeVariables, OverloadedStrings

  Build-Depends:        test-framework, test-framework-hunit, test-framework-quickcheck2,
                        HUnit, QuickCheck

Test-suite redis
  Hs-Source-Dirs:       Test, .
  Main-Is:              RedisProps.hs
  Type:                 exitcode-stdio-1.0
  Build-depends:        attoparsec, base >= 4 && < 5, bytestring, containers, directory,
                        filepath, hslogger, network, pipes >= 3.1, pipes-attoparsec, sexp,
                        SHA, vector-clock, zlib
  Ghc-Options:          -Wall
  Extensions:           ScopedTypeVariables, OverloadedStrings

  Build-Depends:        test-framework, test-framework-hunit, test-framework-quickcheck2,
                        HUnit, QuickCheck
