Name:           ltc
Version:        0.5
Cabal-Version:  >= 1.8
License:        GPL-3
License-File:   LICENSE
Stability:      experimental
Author:         Alexandru Scvortov <scvalex@gmail.com>
Maintainer:     scvalex@gmail.com
Homepage:       https://github.com/scvalex/ltc
Category:       Database
Synopsis:       A distributed, disconnected database for the relativistic universe
Build-Type:     Simple
Description:
        See the @README.md@ file and the homepage for details.

Extra-Source-Files:     Makefile

Data-Files:             README.md, LICENSE

Source-repository head
  Type:                 git
  Location:             https://github.com/scvalex/ltc.git

Library
  Hs-Source-Dirs:       src
  Ghc-options:          -Wall
  Extensions:           ScopedTypeVariables, OverloadedStrings
  Build-depends:        base >= 4.6 && < 5,
                        aeson,
                        array,
                        attoparsec,
                        bytestring,
                        cereal,
                        containers,
                        data-default,
                        directory,
                        filepath,
                        ghc-prim,
                        hslogger,
                        network,
                        pipes >= 3.1,
                        -- FIXME Use latest pipes-attoparsec
                        pipes-attoparsec < 0.2,
                        random,
                        regex-tdfa,
                        sexp >= 0.6,
                        SHA,
                        snap-core,
                        snap-server,
                        stm,
                        transformers,
                        unix,
                        vector-clock,
                        websockets,
                        websockets-snap,
                        zlib
  Exposed-modules:
                        Ltc.Changeset,
                        Ltc.Diff,
                        Ltc.Monkey,
                        Ltc.Network.Interface,
                        Ltc.Network.Interface.Class,
                        Ltc.Network.Interface.Delayed,
                        Ltc.Network.Interface.Null,
                        Ltc.Network.Interface.UDP,
                        Ltc.Network.NodeProtocol,
                        Ltc.Network.NodeServer,
                        Ltc.Network.RedisAdapter,
                        Ltc.Network.RedisProtocol,
                        Ltc.Network.RedisServer,
                        Ltc.Network.StatusServer,
                        Ltc.Network.Types,
                        Ltc.Store,
                        Ltc.Store.Class,
                        Ltc.Store.Event,
                        Ltc.Store.Simple,
                        Ltc.Store.Types,
                        Ltc.Store.VersionControl

Executable ltc
  Ghc-options:          -Wall
  Extensions:           ScopedTypeVariables, OverloadedStrings
  Main-is:              ltc-tool.hs
  Build-depends:        base >= 4.6 && < 5,
                        bytestring,
                        cmdargs,
                        containers,
                        directory,
                        filepath,
                        haskeline,
                        hslogger,
                        ltc,
                        network,
                        random,
                        sexp >= 0.6,
                        transformers,
                        unix

Executable dBay
  Ghc-options:          -Wall
  Extensions:           ScopedTypeVariables, OverloadedStrings
  Main-is:              examples/dBay.hs
  Build-depends:        base >= 4.6 && < 5,
                        cereal,
                        containers,
                        data-default,
                        ghc-prim,
                        ltc,
                        network,
                        sexp,
                        stm

Test-suite store
  Hs-Source-Dirs:       test
  Main-Is:              StoreProps.hs
  Type:                 exitcode-stdio-1.0
  Ghc-Options:          -Wall
  Extensions:           ScopedTypeVariables, OverloadedStrings
  Build-Depends:        base >= 4.6 && < 5,
                        bytestring,
                        containers,
                        directory,
                        HUnit,
                        ltc,
                        network,
                        QuickCheck,
                        test-framework,
                        test-framework-hunit,
                        test-framework-quickcheck2,
                        vector-clock

Test-suite diff
  Hs-Source-Dirs:       test
  Main-Is:              DiffProps.hs
  Type:                 exitcode-stdio-1.0
  Build-depends:        random
  Ghc-Options:          -Wall
  Extensions:           ScopedTypeVariables, OverloadedStrings
  Build-Depends:        base >= 4.6 && < 5,
                        bytestring,
                        containers,
                        ltc,
                        QuickCheck,
                        test-framework,
                        test-framework-quickcheck2

Test-suite redis
  Hs-Source-Dirs:       test
  Main-Is:              RedisProps.hs
  Type:                 exitcode-stdio-1.0
  Ghc-Options:          -Wall
  Extensions:           ScopedTypeVariables, OverloadedStrings

  Build-Depends:        base >= 4.6 && < 5,
                        bytestring,
                        containers,
                        directory,
                        HUnit,
                        ltc,
                        network,
                        QuickCheck,
                        test-framework,
                        test-framework-hunit,
                        test-framework-quickcheck2

Test-suite protocols
  Hs-Source-Dirs:       test
  Main-Is:              Protocols.hs
  Type:                 exitcode-stdio-1.0
  Build-depends:        random
  Ghc-Options:          -Wall
  Extensions:           ScopedTypeVariables, OverloadedStrings
  Build-Depends:        base >= 4.6 && < 5,
                        bytestring,
                        containers,
                        ltc,
                        test-framework,
                        test-framework-smallcheck,
                        smallcheck

Test-suite customtype
  Hs-Source-Dirs:       test
  Main-Is:              CustomType.hs
  Type:                 exitcode-stdio-1.0
  Ghc-Options:          -Wall
  Extensions:           ScopedTypeVariables, OverloadedStrings
  Build-Depends:        base >= 4.6 && < 5,
                        bytestring,
                        cereal,
                        data-default,
                        directory,
                        ghc-prim,
                        HUnit,
                        ltc,
                        network,
                        QuickCheck,
                        sexp,
                        test-framework,
                        test-framework-hunit,
                        vector-clock
